# x1-chess

./: Anchor.toml  README.md  id.json
client/src/: main.rs
client/src/contexts/: check_time_forfeit.rs  leave_game.rs  mod.rs
programs/sol-chess/: Cargo.toml
programs/sol-chess/src/: error.rs  lib.rs
programs/sol-chess/src/contexts/: check_time_forfeit.rs  initialize_game.rs  join_game.rs  mod.rs  move_piece.rs
programs/sol-chess/src/states/: game.rs
