[package]
name = "sol-chess"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_chess"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
# Commenting out clockwork-sdk as it might be causing issues
# clockwork-sdk = "1.4.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
